[bdist_wheel]
universal =1

[metadata]
description-file = README.rst
license_file = LICENSE.txt

[flake8]
ignore =
    # E501: line too long.
    E501,
    # F401, imported but unused, ignore where we import setup.
    F401,
    # E402 module level import not at top of file.
    # To maintain py2 - 3 compat certain orders of import is necessary.
    E402,